# Vacancy_Parcer_OOP

./: .coverage  .coveragerc  .env.sample  README.md  pyproject.toml
data/: lkjlkj.xlsx  ываыва.xlsx
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_ExcelSaver_py.html  z_145eef247bfb46b6_HeadHunterAPI_py.html  z_145eef247bfb46b6_JSONSaver_py.html  z_145eef247bfb46b6_User_py.html  z_145eef247bfb46b6_Vacancy_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_utils_py.html
src/: ExcelSaver.py  FileSaver.py  FileSaverABS.py  HeadHunterAPI.py  JSONSaver.py  Parser.py  ParserABS.py  User.py  UserOperations.py  Vacancy.py  VacancyOperationsABS.py  constants.py  logging_mod.py  main.py  paths.py  utils.py
tests/: conftest.py  test_excel_saver.py  test_headhunter_api.py  test_json_saver.py  test_main.py  test_user.py  test_utils.py  test_vacancy.py
tests/test_datasets/: test_list_dicts_api.txt  test_set_json.json  vac_from_ok.txt  vac_to_none.txt
